--- a/stage_pipeline/Jenkinsfile
+++ b/stage_pipeline/Jenkinsfile
@@ -119,7 +119,7 @@ pipeline {
             }
         }
 
-        stage('Deploy to ECS staging'){
+        stage('Deploy to ECS staging'){ // This stage takes the image on ecr and pushes it to the ecs container
             steps {
                 withAWS(credentials:'awscreds', region: 'us-east-1'){
                     sh 'aws ecs update-service --cluster ${cluster} --service ${service} --force-new-deployment'
