--- a/prod_pipeline/Jenkinsfile
+++ b/prod_pipeline/Jenkinsfile
@@ -1,95 +1,22 @@
 pipeline {
     agent any
-    tools {
-        maven "MAVEN3"
-        jdk "oraclejdk8"
-    }
+    // tools {
+    //     maven "MAVEN3"
+    //     jdk "oraclejdk8"
+    // }
 
     environment {
-        SNAP_REPO = 'vprofile-maven-snapshot'
-        NEXUS_USER = 'admin'
-        NEXUS_PASS = 'admin'
-        RELEASE_REPO = 'vprofile-release'
-        CENTRAL_REPO = 'vprofile-maven-central'
-        NEXUSIP = '172.31.1.142'
-        NEXUSPORT = '8081'
-        NEXUS_GRP_REPO = 'vprofile-maven-group'
-        NEXUS_LOGIN = 'nexuslogin'
-        SONARSERVER = 'sonarserver'
-        SONARSCANNER = 'sonarscanner'
+        cluster = 'vproprod'
+        service = 'vproappprodsvc'
     }
 
     stages {
-        stage('Build'){
-            steps{
-                sh 'mvn -s settings.xml -DskipTests install'
-            }
-            post{
-                success{
-                    echo "Now Archiving"
-                    archiveArtifacts artifacts: '**/*.war'
-                }
-            }
-        }
-
-        stage('Unit Test'){
-            steps{
-                sh 'mvn -s settings.xml test'
-            }
-        }
-
-
-        stage('Checkstyle Analysis'){
-            steps{
-                sh 'mvn -s settings.xml checkstyle:checkstyle'
-            }
-        }
-
-        stage('Sonar Analysis') {
-            environment {
-                scannerHome = tool "${SONARSCANNER}"
-            }
+        stage('Deploy to ECS prod'){ // This stage takes the image on ecr and pushes it to the ecs container
             steps {
-               withSonarQubeEnv("${SONARSERVER}") {
-                   sh '''${scannerHome}/bin/sonar-scanner -Dsonar.projectKey=vprofile \
-                   -Dsonar.projectName=vprofile \
-                   -Dsonar.projectVersion=1.0 \
-                   -Dsonar.sources=src/ \
-                   -Dsonar.java.binaries=target/test-classes/com/visualpathit/account/controllerTest/ \
-                   -Dsonar.junit.reportsPath=target/surefire-reports/ \
-                   -Dsonar.jacoco.reportsPath=target/jacoco.exec \
-                   -Dsonar.java.checkstyle.reportPaths=target/checkstyle-result.xml'''
-              }
-            }
-        }
-
-        stage('Quality Gate'){
-            steps{
-                timeout(time:1, unit:'HOURS'){
-                    // Paramneter indicates whether to set pipeline to UNSTABLE
-                    // true = set pipeline to UNSTABLE, false = don't
-                    waitForQualityGate abortPipeline: true
+                withAWS(credentials:'awscreds', region: 'us-east-1'){
+                    sh 'aws ecs update-service --cluster ${cluster} --service ${service} --force-new-deployment'
                 }
-            }
-        }
 
-        stage('Upload Artifact'){
-            steps{
-                nexusArtifactUploader(
-                    nexusVersion: 'nexus3',
-                    protocol: 'http',
-                    nexusUrl: "${NEXUSIP}:${NEXUSPORT}",
-                    groupId: 'QA',
-                    version: "${env.BUILD_ID}-${env.BUILD_TIMESTAMP}",
-                    repository: "${RELEASE_REPO}",
-                    credentialsId: "${NEXUS_LOGIN}",
-                    artifacts: [
-                        [artifactId: 'vproapp',
-                        classifier: '',
-                        file: 'target/vprofile-v2.war',
-                        type: 'war']
-                    ]
-                )
             }
         }
     }
